--- a/estilos.css
+++ b/estilos.css
@@ -1,3 +1,7 @@
+p{
+    font-family: Arial, Helvetica, sans-serif;
+    color: brown;
+}
 .flip_box {
     transition: all 0.5s ease-out;
     -webkit-transform-style: preserve-3d;
